--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,12 +14,13 @@ spring:
         registration:
           # --- GOOGLE CONFIGURATION (UNCOMMENTED) ---
           google:
-            client-id: 976496236052-kr0clk8ovkujnaod8faf7li9e8o6o2ce.apps.googleusercontent.com     # Get this from Google Cloud Console
+            client-id:      976496236052-kr0clk8ovkujnaod8faf7li9e8o6o2ce.apps.googleusercontent.com      # Get this from Google Cloud Console
             client-secret: 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     # Get this from Google Cloud Console
             scope:
               - profile     # Access to basic profile info (name, picture)
               - email       # Access to email address
-              - https://www.googleapis.com/auth/calendar.readonly
+              - https://www.googleapis.com/auth/calendar
+              - https://www.googleapis.com/auth/calendar.events
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
 
           # --- GITHUB CONFIGURATION (UNCOMMENTED) ---
@@ -47,3 +48,7 @@ spring:
 
   application:
     name: 0auth-githubtesting
+
+logging:
+  level:
+    org.springframework.web.client.RestTemplate: DEBUG
